# pbc_datagen

./: .gitignore  CLAUDE.md  CMakeLists.txt  PT_FORMAT.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  HDF5_SCHEMAS.md  LESSONS.md  PLAN.md
python/pbc_datagen/: __init__.py  _core.pyi  autocorrelation.py  convergence.py  io.py  orchestrator.py  parallel_tempering.py  pt_engine_2d.py  registry.py  single_chain.py  spectral.py  validation.py
scripts/: bench_ising.py  convert_to_pt.py  demo.py  demo_ashkin_teller.py  demo_blume_capel.py  generate_dataset.py  generate_single.py  generate_single_parallel.py  plot_at_phases.py  plot_obs_vs_T.py  plot_snapshots.py
src/cpp/: ashkin_teller.cpp  bindings.cpp  blume_capel.cpp  ising.cpp  xy.cpp
src/cpp/include/: ashkin_teller.hpp  blume_capel.hpp  ising.hpp  lattice.hpp  prng.hpp  pt_engine.hpp  xoshiro256pp.hpp  xy.hpp
tests/: conftest.py  exact_2x2.py  test_autocorrelation.py  test_convergence.py  test_e2e.py  test_foundation.py  test_io.py  test_ising.py  test_metropolis.py  test_observable_cache.py  test_orchestrator.py  test_parallel_tempering.py  test_pipeline_e2e.py  test_produce.py  test_pt_2d_exchange.py  test_pt_detailed_balance.py  test_pt_engine_2d.py  test_pt_exchange.py  test_pt_exchange_round.py  test_pt_labels.py  test_pt_rounds.py  test_single_chain.py  test_snapshot_method.py  test_spectral.py  test_wolff.py
tests/ashkin_teller/: test_metropolis.py  test_model.py  test_sweep.py  test_wolff.py
tests/blume_capel/: test_metropolis.py  test_model.py  test_sweep.py  test_wolff.py
tests/ising/: test_metropolis.py  test_model.py  test_sweep.py  test_wolff.py
tests/xy/: test_metropolis.py  test_model.py  test_sweep.py  test_wolff.py
