[project]
name = "pbc-datagen"
version = "0.1.0"
description = "Paper-quality 2D lattice model snapshot generator (Ising, Blume-Capel, Ashkin-Teller)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "h5py>=3.8",
    "matplotlib>=3.7",
    "rich>=14.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "pybind11>=2.12",
]

[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["python/pbc_datagen"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = ["integration: slow end-to-end tests (deselected by default, run with -m integration)"]

[dependency-groups]
dev = [
    "scipy-stubs>=1.15.3.0",
]
